--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
   "homepage": "https://github.com/nukosuke/hugo-framework#readme",
   "devDependencies": {
     "ts-loader": "^6.1.0",
+    "typescript": "^3.6.3",
     "webpack": "^4.40.2",
     "webpack-cli": "^3.3.8"
-  }
+  },
+  "dependencies": {}
 }
