--- a/package.json
+++ b/package.json
@@ -30,5 +30,8 @@
     "webpack": "^4.40.2",
     "webpack-cli": "^3.3.8"
   },
-  "dependencies": {}
+  "dependencies": {
+    "@types/turbolinks": "^5.2.0",
+    "turbolinks": "^5.2.0"
+  }
 }
