--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   },
   "dependencies": {
     "@types/turbolinks": "^5.2.0",
+    "bulma": "^0.7.5",
     "stimulus": "^1.1.1",
     "turbolinks": "^5.2.0"
   }
