--- a/theme.toml
+++ b/theme.toml
@@ -1,14 +1,15 @@
 # theme.toml template for a Hugo theme
 # See https://github.com/gohugoio/hugoThemes#themetoml for an example
 
-name = "Framework"
+name = "framework"
 license = "MIT"
-licenselink = "https://github.com/yourname/yourtheme/blob/master/LICENSE"
+licenselink = "https://github.com/nukosuke/hugo-framework/blob/master/LICENSE"
 description = "Hugo theme powered by Bulma and Stimulus"
 homepage = "http://example.com/"
 tags = ["bulma", "turbolinks", "stimulus", "typescript", "webpack"]
 features = []
 min_version = "0.57"
+theme = "framework"
 
 [author]
   name = "nukosuke"
