--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Hugo theme",
   "main": "index.js",
   "scripts": {
+    "build": "webpack",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
